--- a/app/src/main/res/layout/activity_grammar.xml
+++ b/app/src/main/res/layout/activity_grammar.xml
@@ -15,9 +15,9 @@
         android:text="Grammar Topic"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginTop="20sp"
-        android:background="#FFEB3B"
+        android:textSize="22sp"
+
+        android:textColor="#FF9800"
         android:padding="12dp"
         android:layout_marginBottom="10dp"
         />
