--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -29,7 +29,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NOTES"
+            android:text="MATCHING GAME"
             />
 
     </com.google.android.material.tabs.TabLayout>
